--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -172,3 +172,52 @@ nav {
   background-color: blueviolet;
 }
 
+.aspect-16-9 {
+  height: 0;
+  padding-top: 56.25%; /* 16:9 */
+  position: relative;
+  width: 100%;
+}
+
+.aspect-9-16 {
+  height: 0;
+  padding-top: 177.77%; /* (9/16) * 100 */
+  position: relative;
+  width: 100%;
+}
+
+.aspect-3-4 {
+  height: 0;
+  padding-top: 133.33%; /* (3/4) * 100 */
+  position: relative;
+  width: 100%;
+}
+
+.aspect-5-4 {
+  height: 0;
+  padding-top: 80%;
+  position: relative;
+  width: 100%;
+}
+
+.aspect-3-5 {
+  height: 0;
+  padding-top: 166.66%;
+  position: relative;
+  width: 100%;
+}
+
+.aspect-4-5 {
+  height: 0;
+  padding-top: 125%;
+  position: relative;
+  width: 100%;
+}
+
+.aspect-content {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
